# pjmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: vector3.hpp
include/pjmath/: definitions.hpp  divisors.hpp  mat.hpp  mat3.hpp  mat4.hpp  math_defs.hpp  math_funcs.hpp  vec3.hpp  vec4.hpp  vector.hpp
src/: main.cpp
test/: CMakeLists.txt  divisors.cpp  mat_tests.cpp  vector3_tests.cpp
test/mat/: arithmetic_tests.cpp  basic.cpp  diagonal_tests.cpp  identity_tests.cpp  multiply_tests.cpp
test/vec/: basic.cpp
